# Ide3

./: .gitignore  Ide3.cabal  stack.yaml
Ide3/: Ide3.cabal  stack.yaml
Ide3-base/: Ide3-base.cabal  stack.yaml
Ide3-base/src/Ide3/: Constructor.hs  Declaration.hs  Declaration.hs-boot  Digest.hs  Env.hs  Export.hs  Import.hs  Module.hs  Module.hs-boot  ModuleTree.hs  Monad.hs  NewMonad.hs  NewerMonad.hs  OldMonad.hs  OrderedMap.hs  Project.hs  Query.hs  Refactor.hs  Solution.hs  SrcLoc.hs  Types.hs  Utils.hs
Ide3-base/src/Ide3/Constructor/: Exts.hs
Ide3-base/src/Ide3/Declaration/: BindDeclaration.hs  ModifierDeclaration.hs  Parser.hs  SpliceDeclaration.hs  TypeDeclaration.hs
Ide3-base/src/Ide3/Env/: ExternModule.hs  Module.hs  Project.hs  Solution.hs
Ide3-base/src/Ide3/Export/: Parser.hs  Query.hs
Ide3-base/src/Ide3/Import/: Internal.hs  Parser.hs  Query.hs
Ide3-base/src/Ide3/Mechanism/: Internal.hs  State.hs
Ide3-base/src/Ide3/Mechanism/State/: Helpers.hs  Types.hs
Ide3-base/src/Ide3/Module/: Common.hs  Common.hs-boot  Extern.hs  Internal.hs  Lens.hs  Parser.hs  Query.hs  Query.hs-boot
Ide3-base/src/Ide3/Module/Common/: Query.hs  Query.hs-boot  Types.hs
Ide3-base/src/Ide3/NewMonad/: Utils.hs
Ide3-base/src/Ide3/NewMonad/Instances/: Lift.hs  State.hs  Undecidable.hs
Ide3-base/src/Ide3/NewerMonad/: Utils.hs
Ide3-base/src/Ide3/NewerMonad/Instances/: State.hs
Ide3-base/src/Ide3/OldMechanism/: Except.hs  Internal.hs  Internal.hs-boot  State.hs
Ide3-base/src/Ide3/Project/: Internal.hs  Lens.hs  Query.hs
Ide3-base/src/Ide3/Solution/: Internal.hs  Lens.hs  Query.hs
Ide3-base/src/Ide3/SrcLoc/: Exts.hs  Types.hs
Ide3-base/src/Ide3/Types/: Exts.hs  Internal.hs  State.hs
Ide3-base/src/Ide3/Utils/: Parser.hs
Ide3-base/test/: Main.hs  Tests.hs
Ide3-base/test/Tests/: Export.hs  ImportExport.hs  Parsing.hs  Utils.hs
Ide3-base/test/Tests/Declaration/: Basic.hs  NonExistent.hs
Ide3-base/test/Tests/Export/: Basic.hs  NonExistent.hs
Ide3-base/test/Tests/Import/: Basic.hs  NonExistent.hs
Ide3-base/test/Tests/ImportExport/: Basic.hs
Ide3-base/test/Tests/Module/: Basic.hs  Conflicting.hs  NonExistent.hs
Ide3-base/test/Tests/Parsing/: Module.hs
Ide3-common/: Ide3-common.cabal  stack.yaml
Ide3-common/src/: Args.hs  Builder.hs  Editor.hs  EnvironmentMonad.hs  ErrorParser.hs  Initializer.hs  ProjectEditor.hs  ProjectInitializer.hs  ProjectRemover.hs  ProjectRetriever.hs  PseudoReader.hs  ReadOnlyFilesystemSolution.hs  Runner.hs  SimpleFilesystemSolution.hs  SolutionEditor.hs  SolutionRetriever.hs  Viewer.hs  ViewerMonad.hs
Ide3-common/src/EnvironmentMonad/: Internal.hs  TH.hs
Ide3-common/src/EnvironmentMonad/TH/: Helpers.hs
Ide3-common/src/ErrorParser/: Types.hs
Ide3-common/src/Viewer/: Internal.hs
Ide3-common/test/: Main.hs
Ide3-common/test/Tests/: ErrorParser.hs
Ide3-stack/: Ide3-stack.cabal  stack.yaml
Ide3-stack/src/: CabalMonad.hs  StackMonad.hs
Ide3-stack/src/Builder/: Stack.hs
Ide3-stack/src/CabalFilesystemSolution/: Internal.hs
Ide3-stack/src/EnvironmentMonad/: Stack.hs
Ide3-stack/src/Initializer/: Stack.hs
Ide3-stack/src/ProjectEditor/: Stack.hs
Ide3-stack/src/ProjectInitializer/: Stack.hs
Ide3-stack/src/ProjectInitializer/Stack/: Types.hs
Ide3-stack/src/ProjectRemover/: Stack.hs
Ide3-stack/src/ProjectRetriever/: Stack.hs
Ide3-stack/src/Runner/: Stack.hs
Ide3-stack/src/SolutionEditor/: Stack.hs
Ide3-stack/src/SolutionEditor/Stack/: Types.hs
Ide3-stack/src/SolutionRetriever/: Stack.hs
Ide3-yesod/: Ide3-yesod.cabal  stack.yaml
Ide3-yesod/app/: App.hs  Auth.hs  CredentialsMonad.hs  Forms.hs  Handlers.hs  Main.hs  Persist.hs  Routes.hs  Types.hs  UserT.hs  Users.hs
Ide3-yesod/app/Crypto/PasswordStore/: Persist.hs
Ide3-yesod/app/Ide3/: Persist.hs
Ide3-yesod/src/: UserMonad.hs
Ide3/cli/: CmdParser.hs  Command.hs  Initializer.hs  Main.hs  Runner.hs
Ide3/cli/Command/: Trans.hs  Types.hs
Ide3/gui/: BetterTextView.hs  DeclarationPath.hs  Dialogs.hs  GenericGuiEnv.hs  GuiClass.hs  GuiCommand.hs  GuiCommandGeneric.hs  GuiEnv.hs  GuiError.hs  GuiHelpers.hs  GuiMonad.hs  GuiT.hs  GuiViewer.hs  History.hs  Main.hs  MainSignals.hs  ProjectContextMenu.hs  ProjectTree.hs  SearchMode.hs  SolutionContextMenu.hs  SolutionTree.hs  SyntaxHighlighter.hs  SyntaxHighlighter2.hs  Viewer.hs  ViewerMonad2.hs
Ide3/gui/Dialogs/: Class.hs  EditSolutionDialog.hs  GenericNewDialog.hs  MainWindow.hs  MoveDeclarationDialog.hs  NewExportDialog.hs  NewImportDialog.hs  NewModuleDialog.hs  NewPragmaDialog.hs  NewProjectDialog.hs  NewSolutionDialog.hs  RunWithArgsDialog.hs  SearchBar.hs
Ide3/gui/Dialogs/MainWindow/: Accelerators.hs  Components.hs  Menus.hs  Signals.hs  Types.hs
Ide3/gui/Dialogs/NewSolutionDialog/: Types.hs
Ide3/gui/GuiClass/: Dialogs.hs  GuiEnv.hs  GuiT.hs  Types.hs
Ide3/gui/GuiClass/GuiEnv/: Stack.hs
Ide3/gui/GuiCommand/: Internal.hs
Ide3/gui/GuiViewer/: Class.hs  Internal.hs
Ide3/src/: Args.hs  Builder.hs  CabalFilesystemProject.hs  CabalFilesystemSolution.hs  CabalMonad.hs  DirtyModuleClass.hs  Editor.hs  EnvironmentMonad.hs  ErrorParser.hs  Initializer.hs  ProjectEditor.hs  ProjectInitializer.hs  ProjectRetriever.hs  PseudoState.hs  ReadOnlyFilesystemProject.hs  ReadOnlyFilesystemSolution.hs  Runner.hs  SimpleFilesystemProject.hs  SimpleFilesystemSolution.hs  Viewer.hs  ViewerMonad.hs
Ide3/src/Builder/: Stack.hs
Ide3/src/CabalFilesystemSolution/: Internal.hs
Ide3/src/EnvironmentMonad/: Stack.hs
Ide3/src/ErrorParser/: Types.hs
Ide3/src/Ide3/: Export.hs  Import.hs  Module.hs-boot  Project.hs
Ide3/src/Ide3/Module/: Common.hs  Extern.hs  Parser.hs
Ide3/src/Initializer/: Stack.hs
Ide3/src/ProjectEditor/: Stack.hs
Ide3/src/ProjectInitializer/: Cabal.hs  Stack.hs
Ide3/src/ProjectInitializer/Stack/: Types.hs
Ide3/src/ProjectRetriever/: Stack.hs
Ide3/src/Runner/: Stack.hs
Ide3/test/: Main.hs
Ide3/test/Tests/: Declaration.hs  Module.hs  SolutionTree.hs  Utils.hs
Ide3/test/Tests/Export/: NonExistent.hs
Ide3/test/Tests/Parsing/: Declaration.hs
app/: Builder.hs  (+10 more)
(+121 files in other folders)
