name:                Ide3
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/Ide3#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Ide3.Types
                     , Ide3.SrcLoc
                     , Ide3.Mechanism
                     , Ide3.Mechanism.State
                     , Ide3.Mechanism.Internal
                     , Ide3.Project
                     , Ide3.Module
                     , Ide3.Module.Parser
                     , Ide3.Module.Extern
                     , Ide3.Module.Common
                     , Ide3.Monad
                     , Ide3.Import
                     , Ide3.Import.Parser
                     , Ide3.Export
                     , Ide3.Export.Parser
                     , Ide3.Declaration
                     , Ide3.Declaration.Parser
                     , Ide3.Declaration.TypeDeclaration
                     , Ide3.Declaration.BindDeclaration
                     , Ide3.Declaration.ModifierDeclaration
                     , Ide3.Constructor
                     , Ide3.ModuleTree
                     , Ide3.Digest
--                     , Ide3.Free
--                     , Ide3.Free.Interpreter
--                     , Ide3.Free.State
--                     , Ide3.Free.State.Classes
--                     , Ide3.Free.State.Helpers
--                     , Ide3.Free.State.Instances
--                     , Ide3.Free.State.Instances.SimpleProject
  build-depends:       base
                     , containers
                     , mtl
                     , haskell-src-exts
                     , transformers
                     , unix
                     , filepath
                     , free
                     , HsInterface
                     , bytestring
                     , cereal
                     , directory
  default-language:    Haskell2010

--executable FreeTest
--    hs-source-dirs:    freetest
--    main-is:           Main.hs
--    ghc-options:       -threaded -rtsopts -with-rtsopts=-N
--    build-depends:     base
--                     , Ide3
--                     , mtl
--                     , transformers
--                     , free
--                     , directory
--                     , exceptions
--                     , containers
--    default-language:  Haskell2010

executable Ide3-GUI
  hs-source-dirs:      gui
  main-is:             Main.hs
  other-modules:       ProjectTree
                     , GuiCommand
                     , MainWindow
                     , NewProjectDialog
                     , GuiMonad
                     , GuiEnv
                     , ReadOnlyFilesystemProject
                     , Viewer
                     , ViewerMonad
                     , ViewerMonad2
                     , Builder
                     , Initializer
                     , Signal
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Ide3
                     , gtk
                     , glib
                     , transformers
                     , mtl
                     , containers
                     , directory
                     , filepath
                     , process
                     , exceptions
  default-language:    Haskell2010
                     
executable Ide3-CLI
  hs-source-dirs:      cli
  main-is:             Main.hs
  other-modules:       CmdParser
                     , Viewer
                     , ViewerMonad
                     , Command
                     , Command.Trans
                     , Command.Types
                     , Editor
                     , Builder
                     , Runner
                     , Initializer
                     , ReadOnlyFilesystemProject
                     , SimpleFilesystemProject
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Ide3
                     , unix
                     , mtl
                     , transformers
                     , filepath
                     , parsec
                     , HsInterface
                     , haskeline
                     , containers
                     , directory
                     , process
                     , temporary 
                     , exceptions
  default-language:    Haskell2010

test-suite Ide3-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Tests
                     , Tests.Declaration
                     , Tests.Declaration.Basic
                     , Tests.Declaration.NonExistent
                     , Tests.Export
                     , Tests.Export.Basic
                     , Tests.Export.NonExistent
                     , Tests.Import
                     , Tests.Import.Basic
                     , Tests.Import.NonExistent
                     , Tests.ImportExport
                     , Tests.ImportExport.Basic
                     , Tests.Module
                     , Tests.Module.Basic
                     , Tests.Module.Conflicting
                     , Tests.Module.NonExistent
                     , Tests.Parsing
                     , Tests.Parsing.Declaration
                     , Tests.Parsing.Export
                     , Tests.Parsing.Import
                     , Tests.Parsing.Module
                     , Tests.Utils
  build-depends:       base
                     , Ide3
                     , mtl >= 2.2.1
                     , transformers >= 0.4.2.0
                     , HUnit >= 1.3.1.1
                     , containers >= 0.5.6.2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Ide3
