name:                Ide3-common
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/meln5674/Ide3-common#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
    hs-source-dirs:    src
    exposed-modules:   Runner
                     , Builder
                     , Initializer
                     , ProjectInitializer
                     , ProjectEditor
                     , ProjectRetriever
                     , ProjectRemover
                     , Editor
                     , Viewer
                     , ViewerMonad
                     , ReadOnlyFilesystemSolution
                     , SimpleFilesystemSolution
                     , PseudoState
                     , PseudoReader
                     , EnvironmentMonad
                     , Args
                     , ErrorParser
                     , ErrorParser.Types
                     , DirtyModuleClass
    other-modules:     Viewer.Internal
    build-depends:     base
                     , temporary
                     , directory
                     , mtl
                     , transformers
                     , exceptions
                     , process
                     , filepath
                     , Ide3-base
                     , attoparsec
                     , containers
                     , text
    default-language:  Haskell2010

test-suite Ide3-common-test
    type:               exitcode-stdio-1.0
    hs-source-dirs:     test, src
    main-is:            Main.hs
    other-modules:      ErrorParser
                      , Tests.ErrorParser
    build-depends:      base
                      , Ide3-base
                       , HUnit
                       , mtl
                       , transformers
                       , parsec
                       , haskell-src-exts
                       , directory
                       , exceptions
                       , process
                       , filepath
                       , text
                       , containers


