name:                Ide3-stack
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/meln5674/Ide3-stack#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Runner.Stack
                     , Builder.Stack
                     , Initializer.Stack
                     , SolutionRetriever.Stack
                     , SolutionEditor.Stack
                     , SolutionEditor.Stack.Types
                     , ProjectInitializer.Stack
                     , ProjectInitializer.Stack.Types
                     , ProjectEditor.Stack
                     , ProjectRetriever.Stack
                     , ProjectRemover.Stack
                     , CabalFilesystemSolution
                     , CabalMonad
                     , StackMonad
                     , EnvironmentMonad.Stack
  other-modules:       CabalFilesystemSolution.Internal

  build-depends:       base >= 4.7 && < 5
                     , Cabal
                     , Ide3-common
                     , temporary
                     , directory
                     , mtl
                     , transformers
                     , exceptions
                     , process
                     , process-extras
                     , filepath
                     , Ide3-base
                     , parsec
                     , containers
                     , text
  default-language:    Haskell2010

