name:                Ide3
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/meln5674/Ide3#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10


--executable OverlayTest
--  hs-source-dirs:      overlay
--  main-is:             Main.hs
--  default-language:    Haskell2010
--  build-depends:       base >= 4.7 && < 5
--                     , gtk3


executable Ide3-GUI
  hs-source-dirs:      gui
  main-is:             Main.hs
  other-modules:       MainSignals
                     , GenericGuiEnv
                     , GuiT
                     , SolutionTree
                     , BetterTextView
                     , DeclarationPath
                     , GuiViewer
                     , GuiViewer.Internal
                     , GuiViewer.Class
                     , GuiCommand
                     , GuiCommandGeneric
                     , GuiCommand.Internal
                     , Dialogs
                     , Dialogs.Class
                     , Dialogs.MainWindow
                     , Dialogs.NewSolutionDialog
                     , Dialogs.NewSolutionDialog.Types
                     , Dialogs.NewProjectDialog
                     , Dialogs.NewModuleDialog
                     , Dialogs.NewImportDialog
                     , Dialogs.NewExportDialog
                     , Dialogs.GenericNewDialog
                     , Dialogs.SearchBar
                     , Dialogs.MoveDeclarationDialog
                     , GuiMonad
                     , GuiEnv
                     , GuiClass
                     --, GuiClass.Dialogs
                     , GuiClass.GuiEnv
                     --, GuiClass.GuiEnv.Stack
                     , GuiClass.GuiT
                     , GuiClass.Types
                     , ViewerMonad2
                     , GuiHelpers
                     , SolutionContextMenu
                     , SyntaxHighlighter2
                     , History
                     , SearchMode
                     , GuiError
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Ide3-base
                     , Ide3-common
                     , Ide3-stack
                     , gi-gdk
                     , gi-gtk
                     , gi-gtk-hs
                     , gi-glib
                     , haskell-gi-base
                     , transformers
                     , mtl
                     , containers
                     , directory
                     , filepath
                     , process
                     , exceptions
                     , text
                     , conduit
                     , conduit-extra
                     , haskell-src-exts < 1.18
                     , parsec
                     , stm
  default-language:    Haskell2010

custom-setup
    setup-depends:     base
                     , Cabal > 1.24
                     , haskell-gi == 0.18

                     
executable Ide3-CLI
  hs-source-dirs:      cli
  main-is:             Main.hs
  other-modules:       CmdParser
                     , Command
                     , Command.Trans
                     , Command.Types
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Ide3-base
                     , Ide3-common
                     , Ide3-stack
                     , unix
                     , mtl
                     , transformers
                     , filepath
                     , parsec
                     , HsInterface
                     , haskeline
                     , containers
                     , directory
                     , process
                     , temporary 
                     , exceptions
  default-language:    Haskell2010

test-suite Ide3-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, src, gui
  main-is:             Main.hs
  other-modules:       ErrorParser
                     , SolutionTree
                     , DeclarationPath
                     , Tests.ErrorParser
                     , Tests.SolutionTree
  build-depends:       base
                     , Ide3-common
                     , Ide3-base
                     , HUnit
                     , mtl
                     , transformers
                     , parsec
                     , haskell-src-exts < 1.18
                     , directory
                     , exceptions
                     , process
                     , filepath
                     , text
                     , containers

source-repository head
  type:     git
  location: https://github.com/meln5674/Ide3
